--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-scripts": "3.4.1"
   },
   "engines": {
-    "node": "12.11.1"
+    "node": "12.x",
+    "npm": "6.x"
   },
   "scripts": {
     "start": "react-scripts start",
